--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/justforuse/fliqlo#readme",
   "devDependencies": {
+    "sass": "^1.54.8",
     "vite": "^3.0.9"
   }
 }
